# Tecnico

./: .gitignore
AdvancedAlgorithms/: CMakeLists.txt  main.cpp  sample.in  secondMST.cpp
AdvancedAlgorithms/betweenness_centrality/: .gitignore  BetLearn.py  PrepareBatchGraph.pyx  betlearn.py  layers.py  metrics.pxd  predict.py  requirements.txt  setup.py  start.py  utils.pxd  utils.pyx
AdvancedAlgorithms/second_mst/: .gitignore  Makefile  secondMST.cpp  speedup.ipynb
DataScience/: Project - dataset1.ipynb  Project - dataset2.ipynb  Project1-experiments.ipynb  Project1.ipynb  functions.ipynb
IndependentStudies1/: IndependentStudies - Task 2.md  IndependentStudies - Task 3.txt  IndependentStudies - Task 4.key
InformationProcessing/: InformationProcessing - Presentation.key  alice-keyphrases.txt  in.txt  lab03.py  lab04.ipynb  lab05.ipynb  lab09.ipynb
MachineLearning/: RBF.ipynb  Untitled.ipynb
NaturalLanguage/: Project1.ipynb  lab05.ipynb
ParallelAndDistributedComputing/pdc-project/: .gitignore  CMakeLists.txt  Foster methodology.rtf  Makefile  README.md  loop.sh  matFact-mpi.cpp  matFact-omp.cpp  matFact.cpp  matrix.h  run.sh  speedup.py  util.h
ParallelAndDistributedComputing/pdc-project/instances/: inst0.mats  inst1.mats  inst2.mats
PlanningLearningAndIntelligentDecisionMaking/: lab2-rui.ipynb
SoftwareSecurity/: Race3 - Pickles in a seri_al_ous race.ipynb  lab0.ipynb  lab1 - introduction.ipynb  lab2+3 - xss + sql injection.ipynb  lab2.ipynb  lab4.ipynb  lab5 - format strings.ipynb  lab6 - race conditions.ipynb  project - blackpaper.ipynb
(+307 files in other folders)
